--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors Game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -17,9 +18,16 @@
     </div>
     <div class="result"><p>Paper covers rock. You win!</p></div>
     <div class="choices">
-        <div class="choice">
-            <img src="" alt="" srcset="">
+        <div class="choice" id="r">
+            <img src="images/rock-icon.png" alt="" srcset="">
+        </div>
+        <div class="choice" id="p">
+            <img src="images/paper-icon.png" alt="" srcset="">
+        </div>
+        <div class="choice" id="s">
+            <img src="images/scissors-icon.png" alt="" srcset="">
         </div>
     </div>
+    <p id="action-message">Make your move</p>
 </body>
 </html>
