--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <div class="score-board">
         <div id="user-label" class="badge">User</div>
-        <div id="computer-label" class="badge">Computer</div>
+        <div id="computer-label" class="badge">Comp</div>
         <span id="user-score">0</span>:<span id="computer-score">0</span>
     </div>
     <div class="result"><p>Paper covers rock. You win!</p></div>
