resized to scale the rock paper scissors images

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <div class="result"><p>Paper covers rock. You win!</p></div>
     <div class="choices">
         <div class="choice" id="r">
-            <img src="images/rock-icon.png" alt="" srcset="">
+            <img src="images/rock-icon.png" alt="" srcset="" style="width: 200px; height: 337px; object-fit: contain;">
         </div>
         <div class="choice" id="p">
-            <img src="images/paper-icon.png" alt="" srcset="">
+            <img src="images/paper-icon.png" alt="" srcset="" style="width: 200px; height: 337px; object-fit: contain;" >
         </div>
         <div class="choice" id="s">
-            <img src="images/scissors-icon.png" alt="" srcset="">
+            <img src="images/scissors-icon.png" alt="" srcset="" style="width: 209px; height: 337px; object-fit: contain;">
         </div>
     </div>
     <p id="action-message">Make your move</p>
