cleaned the branch

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <h1> Rock Paper Scissors</h1>
     </header>
     <div class="score-board">
-        <div id="user-label" class="badge">User</div>
-        <div id="computer-label" class="badge">Comp</div>
+        <div id="user-label" class="badge">USER</div>
+        <div id="computer-label" class="badge">COMP</div>
         <span id="user-score">0</span>:<span id="computer-score">0</span>
     </div>
     <div class="result"><p>Paper covers rock. You win!</p></div>
     <div class="choices">
         <div class="choice" id="r">
-            <img src="images/rock-icon.png" alt="" srcset="" style="width: 200px; height: 337px; object-fit: contain;">
+            <img src="images/rock-icon.png" alt="" srcset="" style="width: 200px; height: 100px; object-fit: contain;">
         </div>
         <div class="choice" id="p">
-            <img src="images/paper-icon.png" alt="" srcset="" style="width: 200px; height: 337px; object-fit: contain;" >
+            <img src="images/paper-icon.png" alt="" srcset="" style="width: 200px; height: 100px; object-fit: contain;" >
         </div>
         <div class="choice" id="s">
-            <img src="images/scissors-icon.png" alt="" srcset="" style="width: 209px; height: 337px; object-fit: contain;">
+            <img src="images/scissors-icon.png" alt="" srcset="" style="width: 209px; height: 100px; object-fit: contain;">
         </div>
     </div>
     <p id="action-message">Make your move</p>
